@@ -1,3 +1,6 @@
+** Fixed gsl_sf_hyperg_2F1(a,b,c,x) to avoid returning NaN for
+   arguments |a|>10. [bug #24812]
+
 ** Added new routine gsl_linalg_complex_cholesky_invert to handle the
    matrix inversion for complex Cholesky decompositions (Huan Wu).
 
